# postgres-fts-backend

./: LICENSE  README.md  pyproject.toml
postgres_fts_backend/: __init__.py
tests/: mocks.py  run_tests.py  search_indexes.py  settings.py  test_postgres_fts_backend.py  test_postgres_fts_query.py
tests/core/: models.py
tests/core/fixtures/: bulk_data.json
